@@ -41,8 +41,10 @@ CAMLextern int caml_convert_signal_number (int);
 CAMLextern int caml_rev_convert_signal_number (int);
 void caml_execute_signal(int signal_number, int in_signal_handler);
 void caml_record_signal(int signal_number);
+void caml_process_pending_signals(void);
 void caml_set_action_pending (void);
-value caml_check_gc_without_async_callbacks(value root);
+void caml_do_urgent_gc_and_callbacks (void);
+value caml_check_urgent_gc_and_callbacks (value extra_root);
 void caml_raise_in_async_callback (value exc);
 int caml_set_signal_action(int signo, int action);
 void caml_setup_stack_overflow_detection(void);
