@@ -28,6 +28,7 @@
 #include "caml/misc.h"
 #include "caml/mlvalues.h"
 #include "caml/prims.h"
+#include "caml/signals.h"
 #include "caml/spacetime.h"
 
 /* [size] is a value encoding a number of bytes */
@@ -118,7 +119,8 @@ CAMLprim value caml_obj_with_tag(value new_tag_v, value arg)
   } else {
     res = caml_alloc_shr(sz, tg);
     for (i = 0; i < sz; i++) caml_initialize(&Field(res, i), Field(arg, i));
-    res = caml_check_urgent_gc(res);
+    // Give gc a chance to run, and run memprof callbacks
+    res = caml_check_urgent_gc_and_callbacks(res);
   }
   CAMLreturn (res);
 }
