@@ -105,12 +105,14 @@ CAMLexport value caml_ephemeron_create (mlsize_t len)
   for (i = 1; i < size; i++) Field (res, i) = caml_ephe_none;
   Field (res, CAML_EPHE_LINK_OFFSET) = caml_ephe_list_head;
   caml_ephe_list_head = res;
-  return caml_check_urgent_gc(res);
+  return res;
 }
 
 CAMLprim value caml_ephe_create (value len)
 {
-  return caml_ephemeron_create(Long_val(len));
+  value res = caml_ephemeron_create(Long_val(len));
+  // run memprof callbacks
+  return caml_check_urgent_gc_and_callbacks(res);
 }
 
 CAMLprim value caml_weak_create (value len)
@@ -290,6 +292,9 @@ static value optionalize(int status, value *x)
   } else {
     res = None_val;
   }
+  // run memprof callbacks both for the option we are allocating here
+  // and the calling function.
+  caml_check_urgent_gc_and_callbacks(Val_unit);
   CAMLreturn(res);
 }
 
@@ -419,8 +424,8 @@ CAMLexport int caml_ephemeron_get_key_copy(value ar, mlsize_t offset,
 CAMLprim value caml_ephe_get_key_copy (value ar, value n)
 {
   value key;
-  return optionalize(caml_ephemeron_get_key_copy(ar, Long_val(n), &key),
-                     &key);
+  int status = caml_ephemeron_get_key_copy(ar, Long_val(n), &key);
+  return optionalize(status, &key);
 }
 
 CAMLprim value caml_weak_get_copy (value ar, value n)
@@ -475,7 +480,8 @@ CAMLexport int caml_ephemeron_get_data_copy (value ar, value *data)
 CAMLprim value caml_ephe_get_data_copy (value ar)
 {
   value data;
-  return optionalize(caml_ephemeron_get_data_copy(ar, &data), &data);
+  int status = caml_ephemeron_get_data_copy(ar, &data);
+  return optionalize(status, &data);
 }
 
 CAMLexport int caml_ephemeron_key_is_set(value ar, mlsize_t offset)
